test/files/pos/compat-exemption.scala
// scalac: -Xlint -Werror
//
package scala.collection {
  package object compat
}

package test {
  import scala.collection.compat._
}
